web/static/global.css
/* web/static/global.css */

:root {
  /* snatched from sveltekit vercel boilerplate tysm */
  max-width: 100vw;
  --font-body: Poppins, sans-serif;
  --font-mono: "Courier New", Courier, monospace;
  --color-bg-0: hsl(60, 100%, 99.8%);
  --color-bg-1: hsl(55, 100%, 97.6%);
  --color-bg-2: hsl(300, 100%, 99.2%);
  --color-theme-1: #fff7ac;
  --color-theme-2: #bcd3ff;
  --color-text: rgba(0, 0, 0, 0.7);
  --column-width: 42rem;
  --column-margin-top: 4rem;
  font-family: var(--font-body);
  color: var(--color-text);
}

html {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: center;
  background-color: #fffdf5;
  background-image: linear-gradient(45deg, #fffdf5 0%, #fff6f9 100%);
}
.container {
  /* for centring and positioning centre-container */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: Poppins, sans-serif;
  width: 100vw;
  min-height: fit-content;
}
.centre-container {
  /* pls fix lol; duplicate entries in this file for .centre-container? */
  /* sits within container */
  display: flex;
  flex-direction: column;
  align-items: flex-start;

  margin-top: 32px;
  margin-bottom: 32px;
  /* margin-top and margin-bottom must remain the same
  for this element class can sometimes appear by itself with
  no title above or below, so any difference would be
  visible and ultimately unappealing */
  margin-left: 32px;
  margin-right: 32px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 12px;
  gap: 18px;

  border-width: 3px;
  border-style: dashed;
  border-color: #5a5467;
  border-radius: 32px;
  font-family: Poppins, sans-serif;
  max-width: 100vw;
  max-width: 744px; /* should be just enough to squeeze in two activity log cards */
}
.centre-container {
  /* sits within container */
  display: flex;
  flex-direction: column;
  align-items: center;

  margin-top: 32px;
  margin-bottom: 32px;
  margin-left: 32px;
  margin-right: 32px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 12px;

  border-width: 3px;
  border-style: dashed;
  border-color: #5a5467;
  border-radius: 32px;
  font-family: Poppins, sans-serif;
  max-width: 100vw;
  max-width: 744px; /* should be just enough to squeeze in two activity log cards */
}
.dark .centre-container {
  background-color: #121212;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  max-width: 480px;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-left: 12px;
  margin-right: 12px;
  padding: 0px;
  gap: 0px;
  font-family: Poppins, sans-serif;
  color: #000000;
}
h1 {
  font-size: 1.75em;
}
p {
  border-radius: 12px;
  border-width: 1px;
  border-style: none;
  font-family: Poppins, sans-serif;
  margin-top: 4px;
  margin-bottom: 4px;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 10px;
  padding-right: 10px;
}
a {
  color: #df5f8c;
  text-decoration: underline dashed #ffffff;
}
ul,
ol,
li {
  flex-direction: row;
  flex-wrap: wrap;
  border-radius: 12px;
  border-width: 1px;
  border-style: none;
  font-family: Poppins, sans-serif;
  margin-top: -6px;
  margin-bottom: -8px;
  margin-left: 18px;
  margin-right: 18px;
  padding: 10px;
  max-width: 100vw;
}
img {
  max-width: 75%; /* max width of images by this default is 75% of what container allows */
  /* please remember to override this if and where necessary! */
  height: auto;
  border-radius: 6px;
}

/* inverted styles for dark mode */
.dark body {
  /* container but for dark theme */
  background: #1a1a1a !important;
  color: #ffffff;
}
.dark .container {
  /* container but for dark theme */
  background-color: #121212;
  color: #f5f5f5;
}
.dark .navbar {
  background-color: #362729;
}
.dark .text-box {
  /* text-box but for dark theme */
  background-color: #2a2a2a !important;
  color: #f5f5f5;
  box-shadow: 8px 8px 24px 12px rgba(255, 255, 255, 0.25);
}
.dark p,
.dark h1,
.dark h2,
.dark h3,
.dark h4,
.dark h5,
.dark h6 {
  color: #ffffff;
}

.footnote {
  align-items: center;
  align-self: center;
  justify-self: center;
  text-align: center;
  margin: 0px;
  margin-top: 8px;
  margin-bottom: 8px;
  margin-left: 16px;
  margin-right: 16px;
  max-width: 75vw;
  color: hsl(259, 10%, 50%);
}

/* poppins classes */
.poppins-thin {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: normal;
}
.poppins-extralight {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: normal;
}
.poppins-light {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: normal;
}
.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}
.poppins-medium {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}
.poppins-semibold {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
}
.poppins-bold {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: normal;
}
.poppins-extrabold {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: normal;
}
.poppins-black {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: normal;
}
.poppins-thin-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: italic;
}
.poppins-extralight-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 200;
  font-style: italic;
}
.poppins-light-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-style: italic;
}
.poppins-regular-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: italic;
}
.poppins-medium-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: italic;
}
.poppins-semibold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: italic;
}
.poppins-bold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: italic;
}
.poppins-extrabold-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: italic;
}
.poppins-black-italic {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: italic;
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

/* thank you w3schools for these css rules! */
#notice {
  visibility: hidden; /* Hidden by default. Visible on click */
  min-width: 250px; /* Set a default minimum width */
  margin-left: -125px; /* Divide value of min-width by 2 */
  background-color: #fcfcff; /* Black background color */
  color: #000 !important; /* White text color */
  text-align: center; /* Centered text */
  border-radius: 2px; /* Rounded borders */
  padding: 16px; /* Padding */
  position: fixed; /* Sit on top of the screen */
  z-index: 1; /* Add a z-index if needed */
  left: 50%; /* Center the snackbar */
  bottom: 30px; /* 30px from the bottom */
}

/* Show the snackbar when clicking on a button (class added with JavaScript) */
#notice.show {
  visibility: visible; /* Show the snackbar */
  color: #000 !important; /* White text color */
  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
However, delay the fade out process for 2.5 seconds */
  -webkit-animation:
    fadein 0.5s,
    fadeout 0.5s 2.5s;
  animation:
    fadein 0.5s,
    fadeout 0.5s 2.5s;
}

/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }
  to {
    bottom: 30px;
    opacity: 1;
  }
}

@keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }
  to {
    bottom: 30px;
    opacity: 1;
  }
}

@-webkit-keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }
  to {
    bottom: 0;
    opacity: 0;
  }
}

@keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }
  to {
    bottom: 0;
    opacity: 0;
  }
}

